k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ippr
  labels:
    environment: development
    project: ippr
