k8s/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: ippr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "3"
            memory: "10Gi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "3"
            memory: "10Gi"
            ephemeral-storage: "1Gi"
