k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ippr
  namespace: ippr
  labels:
    app: ippr
spec:
  serviceAccountName: ippr
  restartPolicy: Always
  containers:
  - name: ippr
    image: us-docker.pkg.dev/mofilabs/kubecon/ippr:v0.0.8
    ports:
    - containerPort: 8080
    resizePolicy:
    - resourceName: cpu
      restartPolicy: NotRequired
    - resourceName: memory
      restartPolicy: RestartContainer
    resources:
      requests:
        memory: "512Mi"
        cpu: "500m"
      limits:
        cpu: "500m"
        memory: "512Mi"
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
      initialDelaySeconds: 3
      periodSeconds: 5
    readinessProbe:
      httpGet:
        path: /healthz
        port: 8080
      initialDelaySeconds: 2
