k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ippr-service
  namespace: ippr
spec:
  selector:
    app: ippr
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
