k8s/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ippr-gateway
  namespace: ippr
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate # Terminate TLS using your SSL certificate.
      options:
        networking.gke.io/pre-shared-certs: ippr-learngke-dev-cert # Specify the Google Cloud SSL certificate resource name.
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ippr-route
  namespace: ippr
  labels:
    gateway: ippr-gateway
spec:
  parentRefs:
  - name: ippr-gateway
  hostnames:
  - "ippr.learngke.dev"
  rules:
  - backendRefs:
    - name: ippr-service
      port: 80
